SA-19. fixed scrollbar showing issue when content is not overflowing

--- a/pages/friends/list/FriendsList.less
+++ b/pages/friends/list/FriendsList.less
@@ -12,7 +12,7 @@
 }
 
 .scrolling {
-  height: calc(100% - 2.3rem);
-  overflow-y: scroll;
+  height: calc(100% - 1.4rem);
+  overflow-y: auto;
   overflow-x: hidden;
 }
